Sun Oct 25 20:04:35 2009  Akinori MUSHA  <knu@iDaemons.org>

	* object.c (rb_class_initialize): The inherited hook should be run
	  immediately after a new subclass is created, which is before
	  evaluating a given block. [Backport #621]

Sun Oct 25 20:02:46 2009  Akinori MUSHA  <knu@iDaemons.org>

	* configure.in: Fix syntax error.  when() is not defined in this
	  branch.

Fri Oct 23 14:25:54 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (target, target_alias): replace with real cpu.

	* mkconfig.rb: build* are not needed in rbconfig.rb.

Thu Oct 22 17:57:53 2009  Akinori MUSHA  <knu@iDaemons.org>

	* lib/fileutils.rb (FileUtils#fu_get_uid, fu_get_gid): Do not
	  convert an integer back and forth.

Thu Oct 22 17:29:51 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (arg_prepend): removed.  a patch from Mikhail T. in
	  [ruby-core:26217].

	* intern.h (rb_thread_join): added prototype.  a patch from
	  Mikhail T. in [ruby-core:26217].

Wed Oct 21 01:19:56 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* lib/monitor.rb (MonitorMixin.mon_release): ensure the scheduled
	  thread to be alive when a thread is releasing a monitor. #2240

Wed Oct 21 00:28:52 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* lib/webrick/httpauth/digestauth.rb: typo in exception message fixed.

Tue Oct 20 16:46:27 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* include/ruby/win32.h (finite, scalb): inline'ed non-standard
	  identifier macros.  [ruby-core:2234]

Mon Oct 19 05:54:11 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/rexml/element.rb (text=): false should be converted to string.
	  A patch by Teruo Oshida [ruby-dev:38351]

Fri Oct 16 16:42:57 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (CreateChild): recognize escape characters.

Fri Oct 16 16:41:56 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* dln.c (dln_find_1): backport from trunk. [ruby-core:25802]

Fri Oct 16 09:52:00 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
